# diavolo

./: Cargo.toml
crates/bevy-diavolo/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/dialogue/: Cargo.toml
crates/dialogue/examples/: dialogue.yml
crates/dialogue/src/: dialogue.rs  error.rs  lib.rs
crates/dialogue/src/dialogue/: dialogue_name.rs  lines.rs  location.rs  nodes.rs  validate_impl.rs
crates/dialogue/src/dialogue/line/: line_if.rs  line_type.rs
crates/dialogue/src/dialogue/line/line_type/: goto.rs  message.rs  texts.rs
crates/dialogue/src/dialogue/line/line_type/choice/: choice_texts.rs
crates/dialogue/src/dialogue/line/line_type/texts/: lang_texts.rs  text.rs
crates/diavolo/: Cargo.toml
crates/diavolo-dialogue/: Cargo.toml
crates/diavolo-dialogue/examples/: dialogue.yml
crates/diavolo-dialogue/src/: dialogue.rs  error.rs  lib.rs
crates/diavolo-dialogue/src/dialogue/: actor_info.rs  args.rs  line.rs  node.rs  nodes.rs  validate_impl.rs
crates/diavolo-dialogue/src/dialogue/args/: arg_var.rs
crates/diavolo-dialogue/src/dialogue/line/: line_id.rs  line_type.rs
crates/diavolo-dialogue/src/dialogue/line/line_type/: call.rs  choice.rs  confirm.rs  eval.rs  exit.rs  return.rs
crates/diavolo-dialogue/src/dialogue/node/: line.rs  line_type.rs
crates/diavolo-dialogue/src/dialogue/node/line/: line_id.rs
crates/diavolo-dialogue/src/dialogue/node/line_type/: choice.rs  confirm.rs  lang_texts.rs  message.rs
crates/diavolo-dialogue/src/dialogue/node/line_type/choice/: choice_texts.rs  duration_as_f32.rs
crates/diavolo-server/: Cargo.toml
crates/diavolo-server/src/: lib.rs  manager.rs
crates/diavolo-tester/: Cargo.toml
crates/diavolo-tester/src/: app.rs  main.rs
crates/diavolo-tester/src/app/: choice_list.rs  log_collector.rs  widget_impl.rs
crates/diavolo-tester/src/app/selectable_list/: confirm_list.rs
crates/diavolo/src/: boa_ctx.rs  data.rs  dialogue_ctx.rs  engine.rs  lib.rs  line_state.rs  runner.rs  state_machine.rs  store.rs  view.rs  visiting_state.rs  visiting_states.rs
crates/diavolo/src/dialogue_ctx/: actors.rs  args.rs
crates/diavolo/src/engine/: config.rs
crates/diavolo/src/line_state/: call.rs  choice.rs  confirm.rs  eval.rs  goto.rs  message.rs  return.rs
crates/diavolo/src/runner/: action_handler_impl.rs  evaluated_line.rs  view.rs  view_impl.rs
crates/diavolo/src/runner/view/: message.rs
crates/diavolo/src/state_machine/: call_stack.rs  visiting_states.rs
crates/diavolo/src/state_machine/visiting_states/: visiting_state.rs
crates/diavolo/src/state_machine/visiting_states/visiting_state/: choice.rs  message.rs
crates/diavolo/src/view/: choice.rs  confirm.rs  message.rs
crates/diavolo/src/visiting_state/: call.rs  choice.rs  eval.rs  goto.rs  message.rs  return.rs
crates/message/: Cargo.toml
crates/message/src/: client_message.rs  lib.rs  server_message.rs
crates/server/: Cargo.toml
crates/server/examples/: example.rs
crates/server/src/: channels.rs  error.rs  lib.rs  runtimes.rs  server.rs  task.rs
crates/server/src/channels/: dialogue_queue.rs  runner_operation.rs  runner_state_info.rs  view_ch.rs
crates/server/tests/fixtures/: dialogue.yml
crates/tester/src/: app.rs  lib.rs  log_collector.rs  main.rs
crates/tester/src/app/: selectable_list.rs  tui.rs
crates/tester/src/app/selectable_list/: choice_list.rs
