[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
publish = false
repository = "https://github.com/ninjacat0818/diavolo"

[workspace.dependencies]
indexmap = { version = "2.12.0" }
language-tags = "0.3.2"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
thiserror = "2.0.17"
