[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
publish = false
repository = "https://github.com/ninjacat0818/diavolo"

[workspace.dependencies]
indexmap = { version = "2.12.0" }
isolang = { version = "2.4.0" }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145" }
