[package]
name = "diavolo-client"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
futures-util = "0.3.31"
tokio = "1.48.0"
tokio-tungstenite = "0.28.0"
tracing.workspace = true
ws-message = { path = "../message", package = "diavolo-ws-message" }
