[package]
name = "diavolo-dialogue"
version.workspace = true
edition.workspace = true
publish = true
repository.workspace = true

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
language-tags = { workspace = true, features = ["serde"] }
nanoid = "0.4.0"
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"
