[package]
name = "diavolo-dialogue"
version.workspace = true
edition.workspace = true
publish = true
repository.workspace = true

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
isolang = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml = "0.9.34"
