[package]
name = "diavolo-tester"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
diavolo = { path = "../diavolo" }
futures = "0.3.31"
ratatui = "0.29.0"
serde_json.workspace = true
tokio = { version = "1.48", features = ["rt-multi-thread", "time", "macros"] }
tokio-util = "0.7.16"
tracing.workspace = true
tracing-subscriber.workspace = true