[package]
name = "diavolo"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
isolang.workspace = true
dialogue = { path = "../diavolo-dialogue", package = "diavolo-dialogue" }
tracing = "0.1.41"
serde_json.workspace = true
jsonschema = { version = "0.33.0", default-features = false }
boa_engine = { version = "0.21.0", features = ["js"] }
indexmap.workspace = true

[dev-dependencies]
crossterm = "0.29.0"
tracing-subscriber = "0.3.20"
