[package]
name = "diavolo-server"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
diavolo = { path = "../diavolo" }
ws-message = { path = "../message", package = "diavolo-ws-message" }
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
futures-util = { version = "0.3.31", default-features = false }
json-patch = "4.1.0"
tower-http = { version = "0.6.7", features = ["trace"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "fs"] }
tracing.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
axum-test = { version = "18.4.1", features = ["ws"] }
tracing-subscriber.workspace = true
diavolo-client = { path = "../client" }

[features]
